<resources>
    <string name="app_name">Farmacia</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Buscar</string>
    <string name="codigo_producto">Código</string>
    <string name="nombre">Nombre</string>
    <string name="formula">Formula</string>
    <string name="tipo">Tipo</string>
    <string name="title_activity_buscar">Buscar</string>
    <string name="tabla">Tabla</string>
    <string name="nombre_medicamento">Medicamento</string>
    <string name="buscar">Buscar</string>
    <string name="codigo">Codigo</string>
    <string name="codigoP">Proveedor</string>
    <string name="precio">Precio</string>
    <string name="title_activity_eliminar">EliminarActivity</string>
    <string name="title_activity_insertar">InsertarActivity</string>
    <string name="insertar">Insertar</string>
</resources>
