<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.uan.jossuesl.farmacia.InsertarActivity"
    android:background="#2bcbff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="Farmacia Conchita-Insertar"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla"
                android:id="@+id/tvTabla"
                android:gravity="center"
                android:textColor="#ff0000"
                android:layout_alignBottom="@+id/etTabla"
                android:layout_alignStart="@+id/textView2"
                android:visibility="invisible" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etTabla"
                android:hint="tabla"
                android:text="                         "
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cubo">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insertar"
                android:id="@+id/btnInsertar"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nombre"
                android:id="@+id/textView5"
                android:layout_marginTop="34dp"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etNombre"
                android:text="                                            "
                android:layout_above="@+id/textView6"
                android:layout_alignStart="@+id/etCodigoP" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/formula"
                android:id="@+id/textView6"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:layout_marginTop="28dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etFormula"
                android:text="                                            "
                android:layout_alignBottom="@+id/textView6"
                android:layout_alignStart="@+id/etNombre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tipo"
                android:id="@+id/textView7"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etTipo"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/etFormula"
                android:text="                                            " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/precio"
                android:id="@+id/textView9"
                android:layout_below="@+id/etTipo"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etPrecio"
                android:text="                                            "
                android:layout_alignBottom="@+id/textView9"
                android:layout_alignStart="@+id/etTipo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/codigoP"
                android:id="@+id/textView10"
                android:layout_above="@+id/btnInsertar"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etCodigoP"
                android:layout_above="@+id/btnInsertar"
                android:layout_toEndOf="@+id/textView10"
                android:text="                                            " />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

