<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.uan.jossuesl.farmacia.EliminarActivity"
    android:background="#2bcbff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView android:text="@string/nombre_medicamento" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNombre"
                android:textColor="#ff0000"
                android:gravity="center"
                android:layout_alignTop="@+id/etNombre"
                android:layout_alignLeft="@+id/tvTabla"
                android:layout_alignStart="@+id/tvTabla"
                android:layout_alignBottom="@+id/etNombre" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etNombre"
                android:hint="medicamento"
                android:layout_above="@+id/btnInsertar"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/tvNombre"
                android:layout_alignLeft="@+id/etTabla"
                android:layout_alignStart="@+id/etTabla"
                android:text="   " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="Farmacia Conchita-Eliminar"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buscar"
                android:id="@+id/btnInsertar"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginStart="37dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla"
                android:id="@+id/tvTabla"
                android:gravity="center"
                android:textColor="#ff0000"
                android:layout_above="@+id/tvNombre"
                android:layout_toLeftOf="@+id/btnInsertar"
                android:layout_toStartOf="@+id/btnInsertar"
                android:layout_alignTop="@+id/etTabla"
                android:visibility="invisible" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etTabla"
                android:hint="tabla"
                android:layout_above="@+id/etNombre"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/tvNombre"
                android:layout_toRightOf="@+id/tvNombre"
                android:visibility="invisible" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eliminar"
                android:id="@+id/btnEliminar"
                android:layout_below="@+id/etNombre"
                android:layout_alignEnd="@+id/textView2" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cubo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigo"
                android:textSize="20sp"
                android:textColor="#aa00ff"
                android:id="@+id/textView3"
                android:layout_marginLeft="82dp"
                android:layout_marginStart="82dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="------"
                android:textSize="20sp"
                android:id="@+id/tvCodigo"
                android:layout_alignTop="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formula"
                android:textColor="#aa00ff"
                android:textSize="20sp"
                android:id="@+id/textView4"
                android:layout_marginTop="46dp"
                android:layout_below="@+id/textView3"
                android:layout_alignRight="@+id/textView3"
                android:layout_alignEnd="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="------"
                android:textSize="20sp"
                android:id="@+id/tvFormula"
                android:layout_alignTop="@+id/textView4"
                android:layout_alignStart="@+id/tvCodigo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#aa00ff"
                android:text="@string/tipo"
                android:id="@+id/tv2"
                android:layout_above="@+id/textView8"
                android:layout_alignRight="@+id/textView4"
                android:layout_alignEnd="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="------"
                android:textSize="20sp"
                android:id="@+id/tvTipo"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/tvFormula"
                android:layout_alignStart="@+id/tvFormula" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                android:textSize="20sp"
                android:textColor="#aa00ff"
                android:id="@+id/textView8"
                android:layout_marginTop="51dp"
                android:layout_below="@+id/tvTipo"
                android:layout_alignStart="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="------"
                android:textSize="20sp"
                android:id="@+id/tvPrecio"
                android:layout_alignTop="@+id/textView8"
                android:layout_alignLeft="@+id/tvTipo"
                android:layout_alignStart="@+id/tvTipo" />


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>